Fix bad icons alignment on results page in Simple course

--- a/css/main.less
+++ b/css/main.less
@@ -5565,6 +5565,7 @@ form {
                             &::before{
                                 display: block;
                                 position: absolute;
+                                line-height: 26px;
                             }
 
                             &::before{  
